<resources>
    <string name="app_name">Buddies</string>
    <string name="register">register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="login_as_guest">login as guest</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="dogs_gender">Dog\'s gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="save">save</string>
    <string name="search_city">Search city</string>
    <string name="reset">reset</string>
    <string name="new_post">New Post</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="pick_time">Pick Time</string>
    <string name="content">Content</string>
    <string name="upload">upload</string>
    <string name="options">Options</string>
    <string name="my_profile">My Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="posts_i_commented_on">Posts I commented on</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="pick_location">Pick Location</string>
    <string name="google_maps_key_old" translatable="false">AIzaSyBuPUqzWKE20Ppmhn1lB2kY3-kbYIkFer8</string>
    <string name="google_maps_key" translatable="false">AIzaSyBQlVeH6hzTYH1n8IK-ZF0xgvPMqUfK1QA</string>
    <string name="pick">pick</string>
    <string name="time">Time</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="show_location">Show Location</string>
    <string name="hide_location">Hide Location</string>
    <string name="created_on">Created on </string>
    <string name="pick_date">Pick Date</string>
    <string name="date">Date</string>
    <string name="post_creator_name">Post creator\'s name</string>
    <string name="commenter_name">Commenter\'s Name</string>
    <string name="comment_content">Comment Content</string>
    <string name="fcm_api_token_key" translatable="false">AAAAeAqZc38:APA91bHxOAprs_LKN_UBbrVpuy53xTsUoBZxvdYi386PPsKh8-caPc2dmsffqqAfhL7QdtQWT2WMFnemdPG7MiIyJT-z7qJvUhY4wyb3DcR26Iz1PmnLezsEqnN9R1fdoIhmzNOugWUT</string>
    <string name="soon">soon</string>
    <string name="notifications">Notifications</string>
    <string name="alert_dialog_builder_title">Location Access Alert</string>
    <string name="alert_dialog_builder_positive_button">Take me there</string>
    <string name="alert_dialog_builder_message">You will be now redirected to the settings page in order to turn on gps location.\\nAfter the location access confirmation, please wait a few seconds in order the app will recognize your location.</string>
</resources>