<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray50">

    <ImageButton
        android:id="@+id/create_post_back_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/white"
        android:background="@null"
        android:layout_gravity="top|start"
        android:layout_margin="20dp"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="100"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/create_post_pick_location_button"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/pick_location"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/create_post_pick_time_button"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:textAllCaps="false"
            android:text="@string/pick_time"
            android:layout_height="wrap_content"
            android:textColorHint="@color/faded_white"
            android:layout_gravity="center_vertical">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="99"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/create_post_city_output"
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:hint="@string/city"
            android:textColorHint="@color/faded_white"
            android:gravity="center" />

        <TextView
            android:id="@+id/create_post_street_output"
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:hint="@string/street"
            android:textColorHint="@color/faded_white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/create_post_time_output"
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:hint="@string/time"
            android:textColorHint="@color/faded_white"
            android:gravity="center"/>
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/create_post_map_view"
        android:layout_width="330dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="25dp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/faded_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_post_content_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:inputType="textMultiLine"
            android:hint="@string/content"
            android:backgroundTint="@color/faded_white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_post_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textSize="20sp"/>

</LinearLayout>