<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray50"
    android:id="@+id/register_coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/register_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:tint="@color/white"
                android:background="@null"
                android:layout_gravity="top|start"
                android:layout_margin="20dp"
                android:contentDescription="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/faded_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_username_input"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:hint="@string/username"
                    android:backgroundTint="@color/faded_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/faded_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_input"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:hint="@string/password"
                    android:backgroundTint="@color/faded_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/faded_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_full_name_input"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:inputType="text"
                        android:hint="@string/full_name"
                        android:backgroundTint="@color/faded_white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/faded_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_age_input"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:inputType="number"
                        android:hint="@string/age"
                        android:backgroundTint="@color/faded_white"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dogs_gender"
                    android:textColor="@color/faded_white"
                    android:textSize="25sp"/>

                <RadioGroup
                    android:id="@+id/register_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/register_radio_button_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="20sp"
                        android:textColor="@color/faded_white"
                        android:layout_marginEnd="5dp"
                        android:buttonTint="@color/faded_white"/>

                    <RadioButton
                        android:id="@+id/register_radio_button_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="20sp"
                        android:textColor="@color/faded_white"
                        android:layout_marginEnd="5dp"
                        android:buttonTint="@color/faded_white"/>
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/register_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>