<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="false"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:contentPaddingLeft="10dp"
    app:contentPaddingRight="10dp"
    app:contentPaddingTop="5dp"
    app:contentPaddingBottom="5dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="50dp"
    app:cardBackgroundColor="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/card_post_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/dog_default_profile_rounded"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_post_creators_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.5dp"
                    android:text="@string/post_creator_name"
                    android:textColor="@color/white"
                    android:textSize="17.5sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/card_post_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/city"
                        android:textColor="@color/white"
                        android:textSize="12.5sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="•"
                        android:textColor="@color/white"
                        android:textSize="12.5sp"/>

                    <TextView
                        android:id="@+id/card_post_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/white"
                        android:textSize="12.5sp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/card_post_content"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:text="@string/content"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/card_post_creation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/created_on"
            android:textSize="10sp"/>
    </LinearLayout>





</androidx.cardview.widget.CardView>