<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray50"
    android:id="@+id/login_coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@null"
                android:layout_gravity="top|end"
                android:layout_margin="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/white_signature"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:contentDescription="@null" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/faded_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_input"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:hint="@string/username"
                    android:backgroundTint="@color/faded_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/faded_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_input"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:backgroundTint="@color/faded_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/login_login_guest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_as_guest"
                android:textAllCaps="false"
                android:textColor="@color/faded_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>